sidebar: add to recent/favorites

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -90,5 +90,22 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+
+	/* width */
+	::-webkit-scrollbar {
+		width: 6px;
+		height: 6px;
+	}
+
+	/* Track */
+	::-webkit-scrollbar-track {
+		border-radius: 10px;
+	}
+
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+		background: hsl(214.3 31.8% 85%);
+		border-radius: 10px;
+	}
 }
 
