sidebar adjustments, date picker

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* TODO: adjust colors in whole app */
+
 @layer base {
 	:root {
 		--background: 0 0% 100%;
