feat: columnFilter dialog styling, delete fn refactor

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -4,6 +4,8 @@
 
 /* TODO: adjust colors in whole app */
 
+/* TODO: redo css in ui components to only need albi colors */
+
 @layer base {
 	:root {
 		--background: 0 0% 100%;
