--- a/src/app.pcss
+++ b/src/app.pcss
@@ -4,7 +4,7 @@
 
 /* TODO: adjust colors in whole app */
 
-/* TODO: redo css in ui components to only need albi colors */
+/* TODO: redo css in ui input-dialog-components to only need albi colors */
 
 @layer base {
 	:root {
