fix: font display while parsing to pdf, qr code payment

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -1,5 +1,10 @@
 @tailwind base;
 @tailwind components;
+@layer base {
+	img {
+		@apply inline-block;
+	}
+}
 @tailwind utilities;
 
 @layer base {
