feat: invoice template

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -8,6 +8,10 @@
 @tailwind utilities;
 
 @layer base {
+	html {
+		font-family: 'Inter', system-ui, sans-serif;
+	}
+
 	:root {
 		--albi-50: #ecffff;
 		--albi-100: #cefdff;
