test mobile css

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -21,7 +21,7 @@ html {
 
 @layer base {
 	:root {
-		--albi-50: #ecffff;
+		--albi-50: #dbfeff;
 		--albi-100: #cefdff;
 		--albi-200: #a4f7fd;
 		--albi-300: #65effb;
@@ -36,7 +36,7 @@ html {
 		--background: 0 0% 100%;
 		--foreground: 195 82% 15%; /* albi-950 */
 
-		--muted: 180 100% 96%; /* albi-50 */
+		--muted: 180 100% 94%; /* albi-50 */
 		--muted-foreground: 195 82% 15%; /* albi-950 */
 
 		--popover: 0 0% 100%;
