css: app design

--- a/src/lib/ag-grid-theme-builder.pcss
+++ b/src/lib/ag-grid-theme-builder.pcss
@@ -98,7 +98,7 @@
 		--ag-inherited-modal-overlay-background-color,
 		color-mix(in srgb, transparent, var(--ag-background-color) 66%)
 	);
-	--ag-odd-row-background-color: var(--ag-inherited-odd-row-background-color, #f6f6f6);
+	--ag-odd-row-background-color: var(--ag-inherited-odd-row-background-color, #fafafa);
 	--ag-border-radius: var(--ag-inherited-border-radius, 4px);
 	--ag-wrapper-border-radius: var(--ag-inherited-wrapper-border-radius, 4px);
 	--ag-cell-horizontal-padding: var(
@@ -177,7 +177,7 @@
 	);
 	--ag-header-column-resize-handle-color: var(
 		--ag-inherited-header-column-resize-handle-color,
-		var(--ag-border-color)
+		#a4f7fd
 	);
 	--ag-widget-container-horizontal-padding: var(
 		--ag-inherited-widget-container-horizontal-padding,
