--- a/src/app.pcss
+++ b/src/app.pcss
@@ -45,7 +45,7 @@ html {
 		--card: 0 0% 100%;
 		--card-foreground: 195 82% 15%; /* albi-950 */
 
-		--border: 214.3 31.8% 91.4%;
+		--border: 214.3 31.8% 91.4%; /* #e1e7ef */
 		--input: 214.3 31.8% 91.4%;
 
 		--primary: 195 82% 15%; /* albi-950 */
@@ -108,19 +108,15 @@ html {
 
 	/* width */
 	::-webkit-scrollbar {
-		width: 6px;
-		height: 6px;
+		width: 8px;
+		height: 8px;
 	}
 
 	/* Track */
-	::-webkit-scrollbar-track {
-		border-radius: 10px;
-	}
 
 	/* Handle */
 	::-webkit-scrollbar-thumb {
-		background: hsl(214.3 31.8% 85%);
-		border-radius: 10px;
+		background: #ccd1d9;
 	}
 }
 
