--- a/src/app.pcss
+++ b/src/app.pcss
@@ -123,3 +123,9 @@ html {
 .virtual-list-inner {
 	display: table-row !important;
 }
+
+@media screen and (max-width: 768px) {
+	::-webkit-scrollbar {
+		height: 0px;
+	}
+}
