--- a/src/app.pcss
+++ b/src/app.pcss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @layer base {
@@ -6,12 +8,6 @@
 	}
 }
 @tailwind utilities;
-
-@font-face {
-	font-family: 'Inter';
-	font-style: normal;
-	src: url('/fonts/Inter_18pt-Regular.ttf');
-}
 
 html {
 	font-family: Inter;
@@ -61,7 +57,6 @@ html {
 		--ring: 187 97% 43%;
 
 		--radius: 0.5rem;
-
 	}
 
 	.dark {
