customer table api connection

--- a/src/lib/ag-grid-theme-builder.pcss
+++ b/src/lib/ag-grid-theme-builder.pcss
@@ -20,6 +20,14 @@
 	content: '';
 }
 
+.ag-theme-custom .ag-header-cell-label .ag-header-cell-text {
+	white-space: normal; /* Essential for word-wrapping */
+	word-break: keep-all;
+	line-height: 12px;
+	font-size: 12px;
+	padding-top: 2px;
+}
+
 .ag-theme-custom,
 .ag-root-wrapper,
 .ag-measurement-container,
