fix(ag grid): data loading fix, component refactor

--- a/src/lib/ag-grid-theme-builder.pcss
+++ b/src/lib/ag-grid-theme-builder.pcss
@@ -24,6 +24,12 @@
 	content: '';
 }
 
+.ag-theme-custom {
+	--ag-grid-size: 4px;
+	--ag-row-height: 2px;
+}
+
+
 .ag-theme-custom .ag-header-cell-label .ag-header-cell-text {
 	white-space: normal; /* Essential for word-wrapping */
 	word-break: keep-all;
