style: ag custom theme, number input

--- a/src/lib/ag-grid-theme-builder.pcss
+++ b/src/lib/ag-grid-theme-builder.pcss
@@ -10,6 +10,18 @@
 	gap: 0 !important;
 }
 
+.ag-theme-custom .ag-icon {
+	min-width: 20px !important;
+}
+
+.ag-theme-custom .ag-header-icon {
+	min-width: 20px !important;
+}
+
+.ag-theme-custom .ag-sort-indicator-icon {
+	min-width: 24px !important;
+}
+
 .ag-theme-custom .ag-cell-class:focus-visible {
 	border: none;
 	outline: none;
@@ -33,8 +45,9 @@
 .ag-theme-custom .ag-header-cell-label .ag-header-cell-text {
 	white-space: normal; /* Essential for word-wrapping */
 	word-break: keep-all;
-	line-height: 11px;
+	line-height: 10px;
 	font-size: 12px;
+	font-weight: bolder;
 	padding-top: 2px;
 	padding-bottom: 4px;
 }
