--- a/src/lib/ag-grid-theme-builder.pcss
+++ b/src/lib/ag-grid-theme-builder.pcss
@@ -10,6 +10,15 @@
 	gap: 0 !important;
 }
 
+
+
+.ag.ag-theme-custom .ag-menu {
+	background-color: white !important;
+}
+
+
+
+
 .ag-theme-custom .ag-icon {
 	min-width: 20px !important;
 }
