--- a/src/app.pcss
+++ b/src/app.pcss
@@ -38,6 +38,8 @@
 		--albi-900: #155264;
 		--albi-950: #073545;
 
+		--off-white: #faffff;
+
 		--background: 0 0% 100%;
 		--foreground: 195 82% 15%; /* albi-950 */
 
