fix: auth, ag grid configuration

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -18,7 +18,12 @@
 		-webkit-box-shadow: 0 0 0 30px #dbfeff inset !important;
 		-webkit-text-fill-color: #073545 !important;
 	}
+
+	*,*:focus,*:hover{
+		outline:none;
+	}
 }
+
 
 @tailwind utilities;
 
