--- a/src/app.pcss
+++ b/src/app.pcss
@@ -17,7 +17,7 @@
 	input:-webkit-autofill:hover,
 	input:-webkit-autofill:focus,
 	input:-webkit-autofill:active{
-		-webkit-box-shadow: 0 0 0 30px #dbfeff inset !important;
+		-webkit-box-shadow: 0 0 0 30px #ffffff inset !important;
 		-webkit-text-fill-color: #073545 !important;
 	}
 
@@ -129,7 +129,7 @@
 	}
 
 	* {
-		@apply border-border;
+		@apply border-slate-300;
 		margin: 0;
 		overflow: hidden;
 	}
@@ -153,7 +153,7 @@
 	}
 	/* Handle */
 	::-webkit-scrollbar-thumb {
-		background: var(--albi-500);
+		@apply bg-slate-300;
 		border-radius: 8px;
 	}
 }
