--- a/src/app.pcss
+++ b/src/app.pcss
@@ -187,6 +187,10 @@
 
 @layer base {
 	:root {
+		.ag-row-footer {
+			background-color: rgba(224, 248, 225, 0.6) !important;
+		}
+
 		--sidebar-background: 0 0% 98%;
 		--sidebar-foreground: 240 5.3% 26.1%;
 		--sidebar-primary: 240 5.9% 10%;
