double click redirect with input params, page headers

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -26,16 +26,16 @@
 
 	/* HEADER */
 	:global(.ag-header-cell-text) {
-		display: -webkit-box !important;
-		-webkit-line-clamp: 2 !important; /* Limit to 2 lines */
-		line-clamp: 2 !important;
-		-webkit-box-orient: vertical !important;
-		overflow: hidden !important;
-		text-overflow: ellipsis !important;
-		word-break: normal !important; /* Break words if needed */
-		white-space: normal !important;
-		line-height: 12px !important;
-		max-height: 24px !important; /* 2 * line-height */
+		//display: -webkit-box !important;
+		//-webkit-line-clamp: 2 !important; /* Limit to 2 lines */
+		//line-clamp: 2 !important;
+		//-webkit-box-orient: vertical !important;
+		//overflow: hidden !important;
+		//text-overflow: ellipsis !important;
+		//word-break: normal !important; /* Break words if needed */
+		//white-space: normal !important;
+		//line-height: 12px !important;
+		//max-height: 24px !important; /* 2 * line-height */
 	}
 
 	:global(.ag-header-icon) {
