ag grid migration to v33.3.0

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -189,6 +189,9 @@
 	:root {
 		.ag-row-footer {
 			background-color: rgba(224, 248, 225, 0.6) !important;
+			font-weight: normal;
+			border-top-width: 1px;
+			@apply border-slate-300
 		}
 
 		--sidebar-background: 0 0% 98%;
