finished sales analysis module definition

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -191,7 +191,16 @@
 			background-color: rgba(224, 248, 225, 0.6) !important;
 			font-weight: normal;
 			border-top-width: 1px;
-			@apply border-slate-300
+			transform: translateY(0px);
+			height: 30px;
+		}
+
+
+
+		.ag-body-vertical-scroll {
+			width: 0px;
+			max-width: 0px;
+			min-width: 0px;
 		}
 
 		--sidebar-background: 0 0% 98%;
